--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,8 +60,9 @@ logging:
 #
 server:  
     port: ${EVS_SERVER_PORT:8080} 
-    contextPath: /            
-    session:
+    servlet:
+       context-path: /            
+       session:
         persistent: false    
 
         
@@ -947,7 +948,7 @@ nci:
                     "bool": {
                       "must": {
                         "query_string": {
-                          "query": "${term}",
+                          "query": "${searchterm}",
                           ${operator}
                           "fields": ${fields}
                         }
@@ -986,7 +987,7 @@ nci:
                               "bool": {
                                  "must": [
                                     { "multi_match" : {
-                                     "query": "${term}",
+                                     "query": "${searchterm}",
                                       ${operator}
                                      "fields":     ${fields}
      
@@ -1033,7 +1034,7 @@ nci:
                                        "must": [
                                           {
                                            "multi_match": {
-                                           "query": "${term}",
+                                           "query": "${searchterm}",
                                            ${operator}
                                            "fields":  ${fields}
                                            }
@@ -1052,7 +1053,7 @@ nci:
                                             "must": [
                                               {
                                                "multi_match": {
-                                               "query": "${term}",
+                                               "query": "${searchterm}",
                                                ${operator}
                                                "fields":  ${fields}
                                                }
@@ -1094,7 +1095,7 @@ nci:
                     "bool": {
                       "must": {
                         "query_string": {
-                          "query": "${term}",
+                          "query": "${searchterm}",
                           ${operator}
                           "fields": ${fields}
                         }
@@ -1127,7 +1128,7 @@ nci:
                               "bool": {
                                  "must": [
                                     { "multi_match" : {
-                                     "query": "${term}",
+                                     "query": "${searchterm}",
                                       ${operator}
                                      "fields":     ${fields}
      
@@ -1168,7 +1169,7 @@ nci:
                                        "must": [
                                           {
                                            "multi_match": {
-                                           "query": "${term}",
+                                           "query": "${searchterm}",
                                            ${operator}
                                            "fields":  ${fields}
                                            }
@@ -1187,7 +1188,7 @@ nci:
                                             "must": [
                                               {
                                                "multi_match": {
-                                               "query": "${term}",
+                                               "query": "${searchterm}",
                                                ${operator}
                                                "fields":  ${fields}
                                                }
