--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,15 +69,16 @@ server:
 nci:
   evs:
     application:
-      contextPath: ${NCI_EVS_API_PATH:/api/v1/ctrp}
+      contextPath: ${NCI_EVS_API_PATH:/api/v1}
     stardog:
-      url: ${STARDOG_URL:REPLACE_WITH_URL}
-      queryUrl: ${STARDOG_QUERY_URL:REPLACE_WITH_QUERY_URL}
+      monthlyQueryUrl: ${STARDOG_MONTHLY_QUERY_URL:http://localhost:5820/NCIT2/query}
+      monthlyGraphName: ${STARDOG_MONTHLY_GRAPH_NAME:http://NCI_T}
+      weeklyQueryUrl: ${STARDOG_WEEKLY_QUERY_URL:http://localhost:5820/NCIT2/query}
+      weeklyGraphName: ${STARDOG_WEEKLY_GRAPH_NAME:http://NCI_T}
       username: ${STARDOG_USERNAME:REPLACE_WITH_USERNAME}
       password: ${STARDOG_PASSWORD:REPLACE_WITH_PASSWORD}     
-      readTimeout: ${STARDOG_READ_TIMEOUT:10000}
-      connectTimeout: ${STARDOG_CONNECT_TIMEOUT:10000}
-      graphName: ${STARDOG_GRAPH_NAME:REPLACE_WITH_GRAPH_NAME} 
+      readTimeout: ${STARDOG_READ_TIMEOUT:30}
+      connectTimeout: ${STARDOG_CONNECT_TIMEOUT:30}
       owlfileName: ${STARDOG_OWL_FILENAME:REPLACE_WITH_OWL_FILENAME}
       populateCacheCron: ${POPULATE_CACHE_CRON:0 0 1 * * *}
       forcePopulateCache: ${FORCE_POPULATE_CACHE:N}  
