Made the return fields lower case

--- a/src/main/resources/application-thesaurus.yml
+++ b/src/main/resources/application-thesaurus.yml
@@ -14,11 +14,11 @@ thesaurus:
                         p97: 'DEFINITION',
                         alt_definition: 'ALT_DEFINITION',
                         alt_definitions: 'ALT_DEFINITION',
-                        P325: 'ALT_DEFINITION',
+                        p325: 'ALT_DEFINITION',
                         semantictypes: 'Semantic_Type',
                         semantictype: 'Semantic_Type',
                         semantic_type: 'Semantic_Type',
-                        P106: 'Semantic_Type',
+                        p106: 'Semantic_Type',
                         synonyms: 'FULL_SYN',
                         synonym: 'FULL_SYN',
                         full_syn: 'FULL_SYN',
@@ -37,95 +37,95 @@ thesaurus:
                         inverseassociation: 'InverseAssociation',
                         conceptstatus: 'Concept_Status',
                         concept_status: 'Concept_Status',
-                        P310: 'Concept_Status',
+                        p310: 'Concept_Status',
                         neoplastic_status: 'Neoplastic_Status',
-                        P363: 'Neoplastic_Status',
+                        p363: 'Neoplastic_Status',
                         umls_cui: 'UMLS_CUI',
-                        P207: 'UMLS_CUI',
+                        p207: 'UMLS_CUI',
                         nci_meta_cui: 'NCI_META_CUI',
-                        P208: 'NCI_META_CUI',
+                        p208: 'NCI_META_CUI',
                         cas_registry: 'CAS_Registry',
-                        P210: 'CAS_Registry',
+                        p210: 'CAS_Registry',
                         kegg_id:  'KEGG_ID',
-                        P215:  'KEGG_ID',
+                        p215:  'KEGG_ID',
                         biocarta_id:  'BioCarta_ID',
-                        P216:  'BioCarta_ID',
+                        p216:  'BioCarta_ID',
                         accepted_therapeutic_use_for: 'Accepted_Therapeutic_Use_For',
-                        P302: 'Accepted_Therapeutic_Use_For',
+                        p302: 'Accepted_Therapeutic_Use_For',
                         snp_id: 'SNP_ID',
-                        P315: 'SNP_ID',
+                        p315: 'SNP_ID',
                         relative_enzyme_activity: 'Relative_Enzyme_Activity',
-                        P316: 'Relative_Enzyme_Activity',
+                        p316: 'Relative_Enzyme_Activity',
                         fda_table:  'FDA_Table',
-                        P317:  'FDA_Table',
+                        p317:  'FDA_Table',
                         fda_unii_code:  'FDA_UNII_Code',
-                        P319:  'FDA_UNII_Code',
+                        p319:  'FDA_UNII_Code',
                         oid:  'OID',
-                        P320:  'OID',
+                        p320:  'OID',
                         legacy_concept_name:  'Legacy_Concept_Name',
-                        P366:  'Legacy_Concept_Name',
+                        p366:  'Legacy_Concept_Name',
                         nichd_hierarchy_term: 'NICHD_Hierarchy_Term',
-                        P371: 'NICHD_Hierarchy_Term',
+                        p371: 'NICHD_Hierarchy_Term',
                         term_browser_value_set_description: 'Term_Browser_Value_Set_Description',
-                        P376: 'Term_Browser_Value_Set_Description',
+                        p376: 'Term_Browser_Value_Set_Description',
                         gene_encodes_product: 'Gene_Encodes_Product',
-                        P96: 'Gene_Encodes_Product',
+                        p96: 'Gene_Encodes_Product',
                         swiss_prot: 'Swiss_Prot',
-                        P93: 'Swiss_Prot',
+                        p93: 'Swiss_Prot',
                         icd-o-3_code: 'ICD-O-3_Code',
-                        P334: 'ICD-O-3_Code',
+                        p334: 'ICD-O-3_Code',
                         chemical_formula: 'Chemical_Formula',
-                        P350: 'Chemical_Formula',
+                        p350: 'Chemical_Formula',
                         infoods:  'INFOODS',
-                        P353:  'INFOODS',
+                        p353:  'INFOODS',
                         usda_id:  'USDA_ID',
-                        P354:  'USDA_ID',
+                        p354:  'USDA_ID',
                         essential_amino_acid: 'Essential_Amino_Acid',
-                        P356: 'Essential_Amino_Acid',
+                        p356: 'Essential_Amino_Acid',
                         essential_fatty_acid: 'Essential_Fatty_Acid',
-                        P357: 'Essential_Fatty_Acid',
+                        p357: 'Essential_Fatty_Acid',
                         nutrient: 'Nutrient',
-                        P358: 'Nutrient',
+                        p358: 'Nutrient',
                         micronutrient:  'Micronutrient',
-                        P359:  'Micronutrient',
+                        p359:  'Micronutrient',
                         macronutrient:  'Macronutrient',
-                        P360:  'Macronutrient',
+                        p360:  'Macronutrient',
                         extensible_list:  'Extensible_List',
-                        P361:  'Extensible_List',
+                        p361:  'Extensible_List',
                         mirbase_id: 'miRBase_ID',
-                        P362: 'miRBase_ID',
+                        p362: 'miRBase_ID',
                         hgnc_id:  'HGNC_ID',
-                        P369:  'HGNC_ID',
+                        p369:  'HGNC_ID',
                         pid_id: 'PID_ID',
-                        P367: 'PID_ID',
+                        p367: 'PID_ID',
                         chebi_id: 'CHEBI_ID',
-                        P368: 'CHEBI_ID',
+                        p368: 'CHEBI_ID',
                         pdq_open_trial_search_id: 'PDQ_Open_Trial_Search_ID',
-                        P329: 'PDQ_Open_Trial_Search_ID',
+                        p329: 'PDQ_Open_Trial_Search_ID',
                         pdq_closed_trial_search_id: 'PDQ_Closed_Trial_Search_ID',
-                        P330: 'PDQ_Closed_Trial_Search_ID',
+                        p330: 'PDQ_Closed_Trial_Search_ID',
                         ncbi_taxon_id:  'NCBI_Taxon_ID',
-                        P331:  'NCBI_Taxon_ID',
+                        p331:  'NCBI_Taxon_ID',
                         mgi_accession_id: 'MGI_Accession_ID',
-                        P332: 'MGI_Accession_ID',
+                        p332: 'MGI_Accession_ID',
                         contributing_source:  'Contributing_Source',
-                        P322:  'Contributing_Source',
+                        p322:  'Contributing_Source',
                         pubmedid_primary_reference: 'PubMedID_Primary_Reference',
-                        P171: 'PubMedID_Primary_Reference',
+                        p171: 'PubMedID_Primary_Reference',
                         nsc_code: 'NSC_Code',
-                        P175: 'NSC_Code',
+                        p175: 'NSC_Code',
                         entrezgene_id:  'EntrezGene_ID',
-                        P321:  'EntrezGene_ID',
+                        p321:  'EntrezGene_ID',
                         omim_number:  'OMIM_Number',
-                        P100:  'OMIM_Number',
+                        p100:  'OMIM_Number',
                         homologous_gene:  'Homologous_Gene',
-                        P101:  'Homologous_Gene',
+                        p101:  'Homologous_Gene',
                         genbank_accession_number: 'GenBank_Accession_Number',
-                        P102: 'GenBank_Accession_Number',
+                        p102: 'GenBank_Accession_Number',
                         maps_to:  'Maps_To',
-                        P375:  'Maps_To',
+                        p375:  'Maps_To',
                         go_annotation:  'GO_Annotation',
-                        P211:  'GO_Annotation'
+                        p211:  'GO_Annotation'
                        }     
         propertyNotConsidered:
                        {
