--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ apply plugin: 'maven-publish'
 
 
 group = "gov.nih.nci.evs.api"
-version = "1.0.0-SNAPSHOT"
+version = "1.0.0.RELEASE"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
