--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ repositories {
 
 dependencies {
    
-   
+
     compile 'org.springframework.boot:spring-boot-starter-web'       
     compile 'org.springframework.boot:spring-boot-devtools'
     compile 'org.springframework.boot:spring-boot-starter-actuator'  
@@ -70,6 +70,8 @@ dependencies {
     compile "io.springfox:springfox-swagger2:$swaggerversion" 
     compile "io.springfox:springfox-swagger-ui:$swaggerversion"
     compile 'org.springframework.boot:spring-boot-properties-migrator'
+    compile 'org.springframework:spring-aop'
+    compile 'org.aspectj:aspectjweaver:1.9.2'
      
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
