--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-devtools'
     compile 'org.springframework.boot:spring-boot-starter-actuator'  
     compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'commons-io:commons-io:2.6'
     compile "io.springfox:springfox-swagger2:$swaggerversion" 
     compile "io.springfox:springfox-swagger-ui:$swaggerversion"
     compile 'org.springframework.boot:spring-boot-properties-migrator'
